Actualización en campo de alta de usuario
Se agrega nueva administración a listado de area administrativa del
usuario si este es rape

--- a/TableroSLAs/Catalogos/Usuarios.html
+++ b/TableroSLAs/Catalogos/Usuarios.html
@@ -232,6 +232,21 @@
                 </tr>
  
                 <tr class="Controls">
+                  <td class="th">&nbsp;RAPE</td> 
+                  <td><input type="checkbox" id="mc_c_usuarios1CheckBox2" value="1" name="{CheckBox2_Name}" {CheckBox2}></td>
+                </tr>
+ 
+                <tr class="Controls">
+                  <td class="th">&nbsp;Administración RAPE</td> 
+                  <td>
+                    <select id="mc_c_usuarios1ListBox1" name="{ListBox1_Name}">
+                      <option selected value="">Seleccionar Valor</option>
+                      {ListBox1_Options}
+                    </select>
+ </td>
+                </tr>
+ 
+                <tr class="Controls">
                   <td class="th">Activo</td> 
                   <td><input type="checkbox" id="mc_c_usuarios1CheckBox1" value="1" name="{CheckBox1_Name}" {CheckBox1}></td>
                 </tr>
