--- a/TableroSLAs/Login.html
+++ b/TableroSLAs/Login.html
@@ -53,55 +53,145 @@ jQuery(function ($) {
 </script>
 <link rel="stylesheet" type="text/css" href="Styles/{CCS_Style}/Style_doctype.css">
 <link rel="stylesheet" type="text/css" href="Styles/{CCS_Style}/jquery-ui.css">
+<style type="text/css"> 
+ /* base semi-transparente */
+    .overlay{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index:1001;
+  opacity:.75;
+        -moz-opacity: 0.75;
+        filter: alpha(opacity=75);
+    }
+ 
+    /* estilo para la ventana modal */
+    .modal {
+        display: none;
+        position: absolute;
+        top: 60%;
+        left: 20%;
+        width: 60%;
+        height: 450px;
+        padding: 16px;
+        background: #fff;
+  color: #333;
+        z-index:1002;
+        overflow: auto;
+        border-style: solid;
+		border-color: blue;
+		border-width: 1px;
+		font-size: 14px;
+    }
+    </style>
 </head>
 <body>
-{Header}
-<table style="BACKGROUND-COLOR: rgb(242,242,243)" width="100%" border="0">
+{Header} 
+<table style="BACKGROUND-COLOR: rgb(242,242,243)" border="0" width="100%">
   <tr>
     <td style="align: center">&nbsp; 
       <!-- BEGIN Record Login1 -->
       <form id="Login1" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Inicio de Sesión</strong></td> 
-                  <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+                  <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
- 
               </table>
  
               <table class="Record" cellspacing="0" cellpadding="0">
                 <!-- BEGIN Error -->
                 <tr class="Error">
-                  <td colspan="2">{Error}</td> 
+                  <td colspan="2">{Error}</td>
                 </tr>
- <!-- END Error -->
+                <!-- END Error -->
                 <tr class="Controls">
                   <td class="th"><label for="Login1login">Login</label></td> 
-                  <td><input type="text" id="Login1login" maxlength="100" value="{login}" name="{login_Name}" size="20"></td> 
+                  <td><input type="text" id="Login1login" value="{login}" maxlength="100" name="{login_Name}" size="20"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="Login1password">Password</label></td> 
-                  <td><input type="password" id="Login1password" maxlength="100" value="{password}" name="{password_Name}" size="20"></td> 
+                  <td><input type="password" id="Login1password" value="{password}" maxlength="100" name="{password_Name}" size="20"></td>
                 </tr>
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="2">
-                    <!-- BEGIN Button Button_DoLogin --><input type="submit" id="Login1Button_DoLogin" class="Button" alt="Login" value="Login" name="{Button_Name}"><!-- END Button Button_DoLogin --></td> 
+                    <!-- BEGIN Button Button_DoLogin --><input type="submit" id="Login1Button_DoLogin" class="Button" value="Login" alt="Login" name="{Button_Name}"><!-- END Button Button_DoLogin --></td>
                 </tr>
- 
               </table>
- </td> 
+            </td>
           </tr>
- 
         </table>
- 
+        
+		<div id="fade" class="overlay" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'"></div>
+ 		<div id="light" class="modal">
+     		<p style="font-size:14pt;margin-top: -10px" align="right">
+     		 <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'">cerrar</a>
+     		</p>
+     		<p>
+     		<strong>Tablero de Control Integral</strong>.- Es el mecanismo que permite dar visibilidad, a los distintos Grupos de interés del Gobierno del Contrato, sobre el desempeño de los objetivos y resultados esperados del SDMA-4, a fin de apoyar la toma de decisiones de manera racional e informada
+     		</p>
+     		<p>
+     		El Tablero de Control integral muestra 3 diferentes vistass enfocadas en la toma de decisiones Estratégica, Táctica y Operativa.
+     		</p>
+     		<p>
+     		En las diferentes vistas se podrá visualizar información relacionada con las siguientes Administraciones:
+     		</p>
+			<p style="margin-left: 300px">
+				<table>
+					<tr><td>APE1</td><td>ACSI</td></tr>
+					<tr><td>APE2</td><td>ACSMC</td></tr>
+					<tr><td>APE3</td><td>ACPT</td></tr>
+					<tr><td>APE4</td><td>ACTT</td></tr>
+					<tr><td>APE5</td><td></td></tr>
+					<tr><td>APESAYCO</td><td></td></tr>
+					<tr><td>AMCI</td><td></td></tr>
+					<tr><td>AVL</td><td></td></tr>				
+				</table>	
+			</p>     		
+			<p>
+			Para el acceso a este Tablero deberá gestionar su usuario por medio del grupo de Configuración y Métricas establecido por el Modelo de Gobierno del Contrato del SDMA-4. (Alejandro Bermúdez Lozano <a href="mailto: alejandro.bermudez@sat.gob.mx">alejandro.bermudez@sat.gob.mx</a>)
+			</p>
+    	</div>
+    	<div style="width:90%"> 
+	        <p align="right">
+	        	<a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block';"><img src="images/ayuda2.jpg" width="24" height="24" border="0"></a>
+	        </p>
+        </div>
       </form>
- <!-- END Record Login1 --></td> 
+      <!-- END Record Login1 -->
+      <p>{lReportContent}</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+ 
+      <p>&nbsp;</p>
+    </td>
   </tr>
 </table>
 </body>
