Modificación en formato de ventana de ayuda
Modificación en formato de ventana de ayuda

--- a/TableroSLAs/Login.html
+++ b/TableroSLAs/Login.html
@@ -145,8 +145,8 @@ jQuery(function ($) {
      		<p>
      		En las diferentes vistas se podrá visualizar información relacionada con las siguientes Administraciones:
      		</p>
-			<p style="margin-left: 300px">
-				<table>
+			<p>
+				<table style="margin-left: 300px">
 					<tr><td>APE1</td><td>ACSI</td></tr>
 					<tr><td>APE2</td><td>ACSMC</td></tr>
 					<tr><td>APE3</td><td>ACPT</td></tr>
